<resources>
    <string name="app_name">Carbook</string>
    <string name="User">User</string>
    <string name="Password">Password</string>
    <string name="user_default">Chuck_Norris</string>
    <string name="postmessage_default">" "posted an ad in Carbook</string>
    <string name="titleadd_default">Tunning my car</string>
    <string name="title_activity_one_ad">OneAdActivity</string>
    <string name="date_default">Setember 29 7:00 am</string>
    <string name="description_ad_default">Tareye hayu wareogned hahaofteg tied raneser homhu footi oneom feot sariabdo toold noubhu ami ba liene uwe ica ebe keodye, tu ol renoefa reo Se ehe aheir ya noso tahata raim. Ssamien gat cilahet roetih horepid waoyihmas dean. Hoasap ot tehe. Anminc me eneeswic lae reaneh tuo, antass ruetc laor remihan ocoontoh.</string>
</resources>
