<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="210dp"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp"
    android:id="@+id/adCardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="38dp"
                android:id="@+id/userImageView"
                android:src="@drawable/usernorris"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameTextView"
                android:text="@string/user_default"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:id="@+id/postTextView"
                android:text="@string/postmessage_default"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleadd_default"
                android:id="@+id/titleTextView"
                android:textStyle="bold"
                android:padding="10dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:id="@+id/adImageView"
                    android:src="@drawable/ad01"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>